still trying to fix that overflow

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  overflow: auto;
 }
 .vertical {
   display: flex;
